{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 55,
  "lineage": "514e5747-3820-9e08-538f-050809826c7b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-kamailio",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5060"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "5060"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2019-07-06T02:35:33.246-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "fw-kamailio-allow-sip",
            "name": "fw-kamailio-allow-sip",
            "network": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/global/networks/default",
            "priority": 1000,
            "project": "k8s-test-01-239423",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/global/firewalls/fw-kamailio-allow-sip",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "kamailio"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-rtpengine",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2223",
                  "2224"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "2223",
                  "2224"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2019-07-06T08:45:49.539-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "fw-rtpengine-allow-rtp",
            "name": "fw-rtpengine-allow-rtp",
            "network": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/global/networks/default",
            "priority": 1000,
            "project": "k8s-test-01-239423",
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/global/firewalls/fw-rtpengine-allow-rtp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "rtpengine"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.kamailio-lb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider.google"
    },
    {
      "module": "module.kamailio-europe-west4-a",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190618",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/disks/instance-kamailio-europe-west4-a-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "description": "created with project-builder",
            "id": "instance-kamailio-europe-west4-a-0",
            "instance_id": "6094159876237031171",
            "label_fingerprint": "sBCxeeDE9AI=",
            "labels": {
              "service": "kamailio"
            },
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "RsyDR-gU0lM=",
            "name": "instance-kamailio-europe-west4-a-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.90.155.83",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/global/networks/default",
                "network_ip": "10.164.15.192",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "k8s-test-01-239423"
              }
            ],
            "project": "k8s-test-01-239423",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/instances/instance-kamailio-europe-west4-a-0",
            "tags": [
              "kamailio"
            ],
            "tags_fingerprint": "Mf1NfmMQenw=",
            "zone": "europe-west4-a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190618",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/disks/instance-kamailio-europe-west4-a-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "description": "created with project-builder",
            "id": "instance-kamailio-europe-west4-a-1",
            "instance_id": "5989215438440756995",
            "label_fingerprint": "sBCxeeDE9AI=",
            "labels": {
              "service": "kamailio"
            },
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "RsyDR-gU0lM=",
            "name": "instance-kamailio-europe-west4-a-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.90.69.114",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/global/networks/default",
                "network_ip": "10.164.0.63",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "k8s-test-01-239423"
              }
            ],
            "project": "k8s-test-01-239423",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/instances/instance-kamailio-europe-west4-a-1",
            "tags": [
              "kamailio"
            ],
            "tags_fingerprint": "Mf1NfmMQenw=",
            "zone": "europe-west4-a"
          }
        }
      ]
    },
    {
      "module": "module.rtpengine-europe-west4-a",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190618",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/disks/instance-rtpengine-europe-west4-a-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "description": "created with project-builder",
            "id": "instance-rtpengine-europe-west4-a-0",
            "instance_id": "2806904672245087454",
            "label_fingerprint": "pFJZ28aCL9Y=",
            "labels": {
              "service": "rtpengine"
            },
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "RsyDR-gU0lM=",
            "name": "instance-rtpengine-europe-west4-a-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.204.42.149",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/global/networks/default",
                "network_ip": "10.164.0.61",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "k8s-test-01-239423"
              }
            ],
            "project": "k8s-test-01-239423",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/instances/instance-rtpengine-europe-west4-a-0",
            "tags": [
              "rtpengine"
            ],
            "tags_fingerprint": "6kEAIdsVb1s=",
            "zone": "europe-west4-a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190618",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/disks/instance-rtpengine-europe-west4-a-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "description": "created with project-builder",
            "id": "instance-rtpengine-europe-west4-a-1",
            "instance_id": "8600581384342174942",
            "label_fingerprint": "pFJZ28aCL9Y=",
            "labels": {
              "service": "rtpengine"
            },
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "RsyDR-gU0lM=",
            "name": "instance-rtpengine-europe-west4-a-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.204.140.25",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/global/networks/default",
                "network_ip": "10.164.0.60",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "k8s-test-01-239423"
              }
            ],
            "project": "k8s-test-01-239423",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/instances/instance-rtpengine-europe-west4-a-1",
            "tags": [
              "rtpengine"
            ],
            "tags_fingerprint": "6kEAIdsVb1s=",
            "zone": "europe-west4-a"
          }
        }
      ]
    },
    {
      "module": "module.asterisk-europe-west4-a",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190618",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/disks/instance-asterisk-europe-west4-a-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "description": "created with project-builder",
            "id": "instance-asterisk-europe-west4-a-0",
            "instance_id": "3247456239645521116",
            "label_fingerprint": "wb6EcpusxZk=",
            "labels": {
              "service": "asterisk"
            },
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "RsyDR-gU0lM=",
            "name": "instance-asterisk-europe-west4-a-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.90.234.184",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/global/networks/default",
                "network_ip": "10.164.0.58",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "k8s-test-01-239423"
              }
            ],
            "project": "k8s-test-01-239423",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/instances/instance-asterisk-europe-west4-a-0",
            "tags": [
              "asterisk"
            ],
            "tags_fingerprint": "ghiDGAxnQqs=",
            "zone": "europe-west4-a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190618",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/disks/instance-asterisk-europe-west4-a-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "description": "created with project-builder",
            "id": "instance-asterisk-europe-west4-a-1",
            "instance_id": "5341014503070004444",
            "label_fingerprint": "wb6EcpusxZk=",
            "labels": {
              "service": "asterisk"
            },
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "RsyDR-gU0lM=",
            "name": "instance-asterisk-europe-west4-a-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.90.110.254",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/global/networks/default",
                "network_ip": "10.164.0.59",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "k8s-test-01-239423"
              }
            ],
            "project": "k8s-test-01-239423",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/k8s-test-01-239423/zones/europe-west4-a/instances/instance-asterisk-europe-west4-a-1",
            "tags": [
              "asterisk"
            ],
            "tags_fingerprint": "ghiDGAxnQqs=",
            "zone": "europe-west4-a"
          }
        }
      ]
    }
  ]
}